# autonomous_exploration

./: .rosinstall  CMakeLists.txt  README.md  package.xml
backup/detect_frontier/: CMakeLists.txt  package.xml
backup/detect_frontier/launch/: exploration.launch
backup/detect_frontier/src/: backup.cpp  detect_cluster_frontier.cpp  frontier.cpp
config/: autonomous_exploration.rviz  robot.gazebo.xacro
include/frontier_exploration/: frontier_search.h
launch/: gmapping.launch  maze.launch
param/: costmap_common_params.yaml  global_costmap_params.yaml  move_base_params.yaml
plugins/: bounded_explore_layer.cpp
sor_filter/: package.xml
sor_filter/scripts/: bbpublisher.py  pcl_helper.py
sor_filter/src/: pub_box_pc.cpp  sor_filter.cpp
src/: cal_region_fact.cpp  cluster_frontier.cpp  detect_frontier.cpp  explore_client.cpp  frontier_search.cpp  nbv_exploration.cpp  talker.cpp
src/autonomous_exploration/: CMakeLists.txt
src/autonomous_exploration/config/: autonomous_exploration.rviz  gmapping_params.yaml  robot.urdf.xacro
src/autonomous_exploration/launch/: autonomous_exploration.launch  gmapping.launch  house.launch  yolo.launch
src/autonomous_exploration/map/: hello  house.world  maze.world
src/autonomous_exploration/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  yolo_global_costmap_params.yaml
src/autonomous_exploration/src/: cluster_frontier.cpp  nbv_exploration.cpp
src/plane_detector/include/plane_detector/: floor_detector.hpp
src/plane_detector/launch/: test.launch  test_floor.launch
src/plane_detector/src/: test_plane_detector.cpp
src/sor_filter/: CMakeLists.txt
src/sor_filter/scripts/: pcpublisher.py  rosbagToimage.py
src/turtlebot3/.github/workflows/: ros-ci.yml
src/turtlebot3/turtlebot3_navigation/: package.xml
src/turtlebot3/turtlebot3_navigation/launch/: move_base.launch
src/turtlebot3/turtlebot3_slam/launch/: turtlebot3_hector.launch
src/turtlebot3/turtlebot3_slam/rviz/: turtlebot3_gmapping.rviz
src/turtlebot3_msgs/.github/workflows/: ros-ci.yml
src/turtlebot3_slam_3d/launch/: rtabmap.launch  turtlebot3_slam_3d.launch
src/turtlebot3_slam_3d/src/: .rosinstall
src/urg_node/launch/: urg_lidar.launch
